Added some array and loops codes done.

--- a/11L.html
+++ b/11L.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="script/11k.js"></script>
+    <script src="script/11L.js"></script>
   </body>
 </html>
