--- a/11m.html
+++ b/11m.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="script/11k.js"></script>
+    <script src="script/11m.js"></script>
   </body>
 </html>
