--- a/exercises/11c.html
+++ b/exercises/11c.html
@@ -6,27 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script>
-      function getLastValue(array) {
-        const lastIndex = array.length - 1;
-        return array[lastIndex];
-      }
-      console.log(getLastValue([1, 20, 22, 24, 5]));
-      console.log(getLastValue(["hi", "hello", "good"]));
-
-      function arraySwap(array) {
-        const lastIndex = array.length - 1;
-        const lastValue = array[lastIndex];
-        const firstValue = array[0];
-
-        array[lastIndex] = firstValue;
-        array[0] = lastValue;
-
-        return array;
-      }
-
-      console.log(arraySwap([1, 20, 22, 24, 5]));
-      console.log(arraySwap(["hi", "hello", "good"]));
-    </script>
+    <script src="/script/11c.js"></script>
   </body>
 </html>
