--- a/05practiceVariables.html
+++ b/05practiceVariables.html
@@ -1,21 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <script>
-    let variable1 = 3;
-    console.log(variable1);
-
-    let calculation = 2 + 2;
-    console.log(calculation);
-    console.log(calculation + 2);
-
-    let result = calculation + 2;
-    console.log(result);
-  </script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <script src="/script/05.js"></script>
+  </body>
 </html>
