--- a/6epractice.html
+++ b/6epractice.html
@@ -11,7 +11,9 @@
 
     const isHoliday = true;
 
-    if ((age <= 6 || age >= 65) && !isHoliday) {
+   // console.log(!isHoliday)
+
+    if ((age <= 6 || age >= 65) && !isHoliday ) {
        console.log('Discount');
     } else {
        console.log('No discount');
