--- a/exercises/6b.html
+++ b/exercises/6b.html
@@ -1,32 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <script>
-    let hour = 16;
-
-    if (hour >= 6 && hour <= 12) {
-      console.log('Good morning!');
-    } else if (hour >= 13 && hour <= 17) {
-      console.log('Good afternoon!');
-    } else {
-      console.log('Good night!');
-    }
-
-
-    let time = 18;
-
-    if (time >= 6 && time <= 12) {
-      console.log('Good morning!');
-    } else if (time >= 13 && time <= 17) {
-      console.log('Good afternoon!');
-    } else {
-      console.log('Good night!');
-    }
-  </script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <script src="/script/6b.js"></script>
+  </body>
 </html>
