Moved codes into another folder.

--- a/exercises/6j.html
+++ b/exercises/6j.html
@@ -11,9 +11,10 @@
 
       const result = randomNumber < 0.5 ? 'heads' : 'tails';
 
-      const guess = 'tails';
 
-      console.log(guess === result ? 'You win!' : 'You lose!' );
+      const guess = "tails";
+      
+      console.log(guess === result ? 'You win!' : 'You lose!');
     </script>
   </body>
 </html>
