--- a/07-Functions2.html
+++ b/07-Functions2.html
@@ -8,84 +8,21 @@
   <body>
     <script>
       /*
-      true;
-      false;
-
-      console.log(3 < 5);
-      console.log(3 > 5 - 5);
-
-      console.log(5 === "5.00");
-
-      if (true) {
-        console.log("hello");
-      } else {
-        console.log("else");
+      function function1() {
+        console.log('hello');
+        console.log(2 + 2);
       }
 
-      if (false) {
-        console.log("hello");
-      } else {
-        console.log("else");
-      }
-
-      if (30 >= 16) {
-        console.log("You can drive.");
-      } else {
-        console.log("You can not drive.");
-      }
-
-      const age = 15;
-
-      if (age >= 16) {
-        console.log("You can drive.");
-        console.log("Congrats");
-      } else if (age >= 14) {
-        console.log("Almost there!");
-      } else {
-        console.log("You can not drive.");
-      }
-
-      console.log(true && true);
-      console.log(true && false);
-      console.log(0.2 >= 0 && 0.2 < 1 / 3);
-
-      console.log(true || false);
-      console.log(!true);
+      function1();
+      function1();
       */
 
-      /*
-      if (5) {
-        console.log("truthy");
+      function calculateTax(cost, taxPercent = 0.1) {
+        console.log( cost * taxPercent);
       }
 
-      if (0) {
-        console.log("truthy");
-      }
-
-      const cartQuantity = 5;
-
-      if (cartQuantity) {
-        console.log("cart has products");
-      }
-
-      console.log(!0);
-
-      console.log("text" / 5);
-
-      let variable1;
-      console.log(variable1);
-      */
-
-      const result = true ? 'truthy' : 'falsy';
-      console.log(result);
-
-      false && console.log('hello');
-
-      const message = 5 && 'hello';
-      console.log(message);
-
-      const currency = undefined || 'USD';
-      console.log(currency);
+      calculateTax(2000, 0.2);
+      calculateTax(5000, 0.2);
     </script>
   </body>
 </html>
