--- a/rockpaperscissors4.html
+++ b/rockpaperscissors4.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Rock Ppaer Scissors</title>
   </head>
   <body>
     <p>Rock Paper Scissors</p>
@@ -18,7 +18,7 @@
 
     <button
       onclick="
-     playGame('paper');
+      playGame('paper');
   "
     >
       Paper
@@ -26,32 +26,52 @@
 
     <button
       onclick="
-     playGame('scissors');
-  "
+      playGame('scissors');
+
+    "
     >
       Scissors
     </button>
 
-    <button onclick="
-      score.wins = 0,
-      score.losses = 0,
-      score.ties = 0
-    ">Reset Score</button>
+    <button
+      onclick="
+     score.wins = 0;
+     score.losses = 0;
+     score.ties = 0
+    "
+    >
+      Reset Score
+    </button>
 
     <script>
       const score = {
         wins: 0,
         losses: 0,
-        ties: 0
+        ties: 0,
       };
-
 
       function playGame(playerMove) {
         const computerMove = pickComputerMove();
 
         let result = "";
 
-        if (playerMove === "rock") {
+        if (playerMove === "scissors") {
+          if (computerMove === "rock") {
+            result = "You lose.";
+          } else if (computerMove === "paper") {
+            result = "You win.";
+          } else if (computerMove === "scissors") {
+            result = "Tie.";
+          }
+        } else if (playerMove === "paper") {
+          if (computerMove === "rock") {
+            result = "You win.";
+          } else if (computerMove === "paper") {
+            result = "Tie.";
+          } else if (computerMove === "scissors") {
+            result = "You lose.";
+          }
+        } else if (playerMove === "rock") {
           if (computerMove === "rock") {
             result = "Tie.";
           } else if (computerMove === "paper") {
@@ -59,34 +79,15 @@
           } else if (computerMove === "scissors") {
             result = "You win.";
           }
-
-        }  else if (playerMove === 'paper') {
-           if (computerMove === 'rock') {
-              result = 'You win.'
-           } else if (computerMove === 'paper') {
-              result = 'Tie.'
-           } else if (computerMove === 'scissors') {
-              result = 'You lose.'
-           }
-
-        } else if (playerMove === 'scissors') {
-          if (computerMove === 'rock') {
-             result = 'You lose';
-          } else if (computerMove === 'paper') {
-             result = 'You win.';
-          } else if (computerMove === 'scissors') {
-             result = 'Tie.'
-          }
-        } 
-
-        if (result === 'You win.') {
-            score.wins += 1;
-        } else if (result === 'You lose.') {
-            score.losses += 1;
-        } else if (result === 'Tie.') {
-            score.ties += 1;
         }
 
+        if (result === "You win.") {
+          score.wins += 1;
+        } else if (result === "You lose.") {
+          score.losses += 1;
+        } else if (result === "Tie.") {
+          score.ties += 1;
+        }
 
         alert(
           `You picked ${playerMove}. Computer picked ${computerMove}. ${result}.
