--- a/rockpaperscissors4.html
+++ b/rockpaperscissors4.html
@@ -44,11 +44,9 @@
     </button>
 
     <script>
-      const score = {
-        wins: 0,
-        losses: 0,
-        ties: 0,
-      };
+      const score = JSON.parse(localStorage.getItem('score'));
+
+      console.log();
 
       function playGame(playerMove) {
         const computerMove = pickComputerMove();
@@ -88,6 +86,8 @@
         } else if (result === "Tie.") {
           score.ties += 1;
         }
+
+        localStorage.setItem('score', JSON.stringify(score));
 
         alert(
           `You picked ${playerMove}. Computer picked ${computerMove}. ${result}.
