--- a/8aObjects.html
+++ b/8aObjects.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <script>
-    const product1 = {
-      name: 'basketball',
-      price: 2095
-    };
-    console.log(product1);
-  </script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <script src="/script/8aObjects.js"></script>
+  </body>
 </html>
