--- a/learningRPS2.html
+++ b/learningRPS2.html
@@ -36,15 +36,19 @@
       score.wins = 0,
       score.losses = 0,
       score.ties = 0
+      localStorage.removeItem('score');
     ">Reset Score</button>
 
     <script>
-      const score = {
-        wins: 0,
-        losses: 0,
-        ties: 0
-      };
-
+      let score = JSON.parse(localStorage.getItem('score'));
+       
+      if (score === null) {
+         score = {
+          wins: 0,
+          losses: 0,
+          ties: 0
+         }
+      }
 
       function playGame(playerMove) {
         const computerMove = pickComputerMove();
@@ -86,6 +90,8 @@
         } else if (result === 'Tie.') {
             score.ties += 1;
         }
+
+        localStorage.setItem('score', JSON.stringify(score));
 
 
         alert(
