--- a/rockpaperscissors4.html
+++ b/rockpaperscissors4.html
@@ -38,15 +38,22 @@
      score.wins = 0;
      score.losses = 0;
      score.ties = 0
+     localStorage.removeItem('score');
     "
     >
       Reset Score
     </button>
 
     <script>
-      const score = JSON.parse(localStorage.getItem('score'));
+      let score = JSON.parse(localStorage.getItem('score'));
 
-      console.log();
+      if (score === null) {
+        score = {
+          wins: 0,
+          losses: 0,
+          ties: 0
+        }
+      }
 
       function playGame(playerMove) {
         const computerMove = pickComputerMove();
