--- a/rockpaperscissors4.html
+++ b/rockpaperscissors4.html
@@ -45,15 +45,21 @@
     </button>
 
     <script>
-      let score = JSON.parse(localStorage.getItem('score'));
+      let score = JSON.parse(localStorage.getItem("score")) || {
+        wins: 0,
+        losses: 0,
+        ties: 0,
+      };
 
-      if (score === null) {
+      /*
+      if (!score) {
         score = {
           wins: 0,
           losses: 0,
-          ties: 0
-        }
+          ties: 0,
+        };
       }
+      */
 
       function playGame(playerMove) {
         const computerMove = pickComputerMove();
@@ -94,7 +100,7 @@
           score.ties += 1;
         }
 
-        localStorage.setItem('score', JSON.stringify(score));
+        localStorage.setItem("score", JSON.stringify(score));
 
         alert(
           `You picked ${playerMove}. Computer picked ${computerMove}. ${result}.
