--- a/08OBjects.html
+++ b/08OBjects.html
@@ -25,7 +25,8 @@
       delete product.newProperty;
       console.log(product);
       */
-
+       
+      /*
       const product2 = {
         name: 'shirt',
         'delivery-time': '1 day',
@@ -51,6 +52,10 @@
 
       const jsonString = JSON.stringify(product2)
       console.log(JSON.parse(jsonString));
+      */
+
+      console.log('hello'.length);
+      console.log('hello'.toUpperCase());
     </script>
   </body>
 </html>
