--- a/08OBjects.html
+++ b/08OBjects.html
@@ -56,6 +56,12 @@
 
       console.log('hello'.length);
       console.log('hello'.toUpperCase());
+
+      const object1 = {
+        message: 'hello'
+      }
+      const object2 = object1;
+      
     </script>
   </body>
 </html>
