have began again with DOM.

--- a/9DOM.html
+++ b/9DOM.html
@@ -6,8 +6,20 @@
     <title>Document</title>
   </head>
   <body>
+    <button>Hello</button>
+
+
     <script>
-      
+      console.log(document.title);
+      document.title = 'Changed';
+
+     console.log(document.body);
+     
+
+      /*
+      document.body.innerHTML = 'hello';
+      document.title = 'Good job!';
+      */
     </script>
   </body>
 </html>
