--- a/9DOM.html
+++ b/9DOM.html
@@ -8,13 +8,28 @@
   <body>
     <button>Hello</button>
 
+    <button class="js-button">Second button</button>
 
     <script>
+      console.log(document.querySelector("button").innerHTML);
+
+      document.querySelector("button")
+          .innerHTML = "Changed";
+
+      const buttonElement = document.querySelector('.js-button');
+      console.log(buttonElement);
+
+      /*
       console.log(document.title);
       document.title = 'Changed';
 
      console.log(document.body);
-     
+     console.log(typeof document.body);
+
+     console.log(document.body.innerHTML);
+     document.body.innerHTML = 'Changed' ;
+     document.body.innerHTML = '<button>Good job!</button>'
+     */
 
       /*
       document.body.innerHTML = 'hello';
