--- a/rockpaperscissors4.html
+++ b/rockpaperscissors4.html
@@ -33,6 +33,8 @@
       Scissors
     </button>
 
+    <p class="js-score"></p>
+
     <button
       onclick="
      score.wins = 0;
@@ -50,6 +52,10 @@
         losses: 0,
         ties: 0,
       };
+
+      document.querySelector('.js-score')
+           .innerHTML = `Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`;
+      
 
       /*
       if (!score) {
