--- a/rockpaperscissors4.html
+++ b/rockpaperscissors4.html
@@ -41,6 +41,7 @@
      score.losses = 0;
      score.ties = 0
      localStorage.removeItem('score');
+     updateScoreElement();
     "
     >
       Reset Score
@@ -53,8 +54,7 @@
         ties: 0,
       };
 
-      document.querySelector('.js-score')
-           .innerHTML = `Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`;
+      updateScoreElement();
       
 
       /*
@@ -108,10 +108,18 @@
 
         localStorage.setItem("score", JSON.stringify(score));
 
+        updateScoreElement();
+
         alert(
           `You picked ${playerMove}. Computer picked ${computerMove}. ${result}.
 Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`
         );
+      }
+
+      function updateScoreElement() {
+        document.querySelector('.js-score')
+          .innerHTML = `Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`;
+
       }
 
       function pickComputerMove() {
