--- a/rockpapscspersonal.html
+++ b/rockpapscspersonal.html
@@ -39,6 +39,7 @@
       score.losses = 0,
       score.ties = 0
       localStorage.removeItem('score');
+      updateScoreElement();
     ">Reset Score</button>
 
     <script>
@@ -48,8 +49,7 @@
           ties: 0
          };
 
-         document.querySelector('.js-score')
-           .innerHTML = `Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`;
+         updateScoreElement();
       
          /*
       if (!score) {
@@ -104,11 +104,18 @@
 
         localStorage.setItem('score', JSON.stringify(score));
 
+        updateScoreElement();
+
 
         alert(
           `You picked ${playerMove}. Computer picked ${computerMove}. ${result}.
 Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`
         );
+      }
+
+      function updateScoreElement() {
+        document.querySelector('.js-score')
+         .innerHTML = `Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`;
       }
 
       function pickComputerMove() {
