Rock Paper Scissors Game.

--- a/rockpaperscissors4.html
+++ b/rockpaperscissors4.html
@@ -33,6 +33,10 @@
       Scissors
     </button>
 
+    <p class="js-result"></p>
+
+    <p class="js-moves"></p>
+
     <p class="js-score"></p>
 
     <button
@@ -55,7 +59,6 @@
       };
 
       updateScoreElement();
-      
 
       /*
       if (!score) {
@@ -110,16 +113,17 @@
 
         updateScoreElement();
 
-        alert(
-          `You picked ${playerMove}. Computer picked ${computerMove}. ${result}.
-Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`
-        );
+        document.querySelector(".js-result").innerHTML = result;
+
+        document.querySelector(
+          ".js-moves"
+        ).innerHTML = `You ${playerMove} - ${computerMove} Computer`;
       }
 
       function updateScoreElement() {
-        document.querySelector('.js-score')
-          .innerHTML = `Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`;
-
+        document.querySelector(
+          ".js-score"
+        ).innerHTML = `Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`;
       }
 
       function pickComputerMove() {
