--- a/rockpapscspersonal.html
+++ b/rockpapscspersonal.html
@@ -32,6 +32,10 @@
       Scissors
     </button>
 
+    <p class="js-result"></p>
+
+    <p class="js-moves"></p>
+
     <p class="js-score"></p>
 
     <button onclick="
@@ -106,11 +110,14 @@
 
         updateScoreElement();
 
+        document.querySelector('.js-result')
+         .innerHTML = result;
 
-        alert(
-          `You picked ${playerMove}. Computer picked ${computerMove}. ${result}.
-Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`
-        );
+         document.querySelector('.js-moves')
+          .innerHTML = `You ${playerMove} - You ${computerMove}Computer `
+
+
+       
       }
 
       function updateScoreElement() {
