--- a/DOMprojects.html
+++ b/DOMprojects.html
@@ -17,30 +17,47 @@
       Subscribed
     </button>
 
-
     <p>Amazon Shipping Calculator</p>
 
-    <input placeholder="Cost of order" class="js-cost-input">
+    <input
+      placeholder="Cost of order"
+      class="js-cost-input"
+      onkeydown="
+      handleCostKeyDown(event);
+    "
+    />
 
-    <button onclick="
+    <button
+      onclick="
         calculateTotal();
-    ">Calculate</button>
+    "
+    >
+      Calculate
+    </button>
 
     <p class="js-total-cost"></p>
 
     <script>
+      String(34)
+
+
+      function handleCostKeyDown(event) {
+        if (event.key === "Enter") {
+          calculateTotal();
+        }
+      }
+
       function calculateTotal() {
-        const inputElement = document.querySelector('.js-cost-input');
+        const inputElement = document.querySelector(".js-cost-input");
         let cost = Number(inputElement.value);
-        
 
         if (cost < 40) {
           cost = cost + 10;
         }
 
-        document.querySelector('.js-total-cost').innerHTML = `$${cost}`;
+        document.querySelector(".js-total-cost").innerHTML = `$${cost}`;
       }
-      
+
       function subscribe() {
         const buttonElement = document.querySelector(".js-subscribe-button");
 
