learning Document object model through a project.

--- a/DOMprojects.html
+++ b/DOMprojects.html
@@ -39,6 +39,8 @@
 
     <script>
       String(34)
+      console.log('34'-34);
+      console.log('34' + 4);
 
 
       function handleCostKeyDown(event) {
