--- a/DOMPROJECTPERS.html
+++ b/DOMPROJECTPERS.html
@@ -19,24 +19,40 @@
 
     <p>Amazon Shipping Calculator</p>
 
-    <input placeholder="Cost of order" class="js-cost-input">
+    <input
+      placeholder="Cost of order"
+      class="js-cost-input"
+      onkeydown="
+       handleCostKeyDown(event);
+    "
+    />
 
-    <button onclick="
+    <button
+      onclick="
       calculateTotal();
-    ">Calculate</button>
+    "
+    >
+      Calculate
+    </button>
 
     <p class="js-total-cost"></p>
 
     <script>
+      function handleCostKeyDown(event) {
+        if (event.key === "Enter") {
+          calculateTotal();
+        }
+      }
+
       function calculateTotal() {
-         const inputElement = document.querySelector('.js-cost-input');
-         let cost = Number(inputElement.value);
+        const inputElement = document.querySelector(".js-cost-input");
+        let cost = Number(inputElement.value);
 
-         if (cost < 40) {
-           cost = cost + 10;
-         }
+        if (cost < 40) {
+          cost = cost + 10;
+        }
 
-         document.querySelector('.js-total-cost').innerHTML = `$${cost}`;
+        document.querySelector(".js-total-cost").innerHTML = `$${cost}`;
       }
 
       function subscribe() {
