Learnt more details about strings and windoobject

--- a/DOMprojects.html
+++ b/DOMprojects.html
@@ -42,6 +42,10 @@
       console.log('34'-34);
       console.log('34' + 4);
 
+      window.document
+      window.console.log('window');
+      window.alert();
+
 
       function handleCostKeyDown(event) {
         if (event.key === "Enter") {
