--- a/DOMPROJECTPERS.html
+++ b/DOMPROJECTPERS.html
@@ -37,33 +37,6 @@
 
     <p class="js-total-cost"></p>
 
-    <script>
-      function handleCostKeyDown(event) {
-        if (event.key === "Enter") {
-          calculateTotal();
-        }
-      }
-
-      function calculateTotal() {
-        const inputElement = document.querySelector(".js-cost-input");
-        let cost = Number(inputElement.value);
-
-        if (cost < 40) {
-          cost = cost + 10;
-        }
-
-        document.querySelector(".js-total-cost").innerHTML = `$${cost}`;
-      }
-
-      function subscribe() {
-        const buttonElement = document.querySelector(".js-subscribe-button");
-
-        if (buttonElement.innerText === "Subscribe") {
-          buttonElement.innerHTML = "Subscribed";
-        } else {
-          buttonElement.innerHTML = "Subscribe";
-        }
-      }
-    </script>
+    <script src="/script/DOMPROJECTPERS.js"></script>
   </body>
 </html>
