--- a/DOMprojects2.html
+++ b/DOMprojects2.html
@@ -3,34 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>DOM Projects</title>
     <style>
       .subscribe-button {
         border: none;
-        background-color: #000;
-        color: #fff;
-        padding: 10px 15px;
+        background-color: black;
+        color: white;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 15px;
+        padding-right: 15px;
+        font-weight: bold;
         border-radius: 50px;
-        font-weight: 600;
         cursor: pointer;
       }
 
       .is-subscribed {
         background-color: rgb(240, 240, 240);
-        color: #000;
+        color: black;
+      }
+
+      body {
+        
       }
     </style>
   </head>
   <body>
-    <p>Youtube Subscribe Button</p>
+    <p>YouTube Subscribe Button</p>
 
     <button
       onclick="
-     subscribe();
+      subscribe();
   "
       class="js-subscribe-button subscribe-button"
     >
-      Subscribe
+      Subscribed
     </button>
 
     <p>Amazon Shipping Calculator</p>
@@ -39,13 +46,13 @@
       placeholder="Cost of order"
       class="js-cost-input"
       onkeydown="
-       handleCostKeyDown(event);
+      handleCostKeyDown(event);
     "
     />
 
     <button
       onclick="
-      calculateTotal();
+        calculateTotal();
     "
     >
       Calculate
@@ -54,6 +61,13 @@
     <p class="js-total-cost"></p>
 
     <script>
+      String(34);
+      console.log("34" - 34);
+      console.log("34" + 4);
+
+      window.document;
+      window.console.log("window");
+
       function handleCostKeyDown(event) {
         if (event.key === "Enter") {
           calculateTotal();
@@ -62,13 +76,13 @@
 
       function calculateTotal() {
         const inputElement = document.querySelector(".js-cost-input");
-        let cost = Number(inputElement.value) * 100;
+        let cost = Number(inputElement.value);
 
-        if (cost < 4000) {
-          cost = cost + 1000;
+        if (cost < 40) {
+          cost = cost + 10;
         }
 
-        document.querySelector(".js-total-cost").innerHTML = `$${cost / 100}`;
+        document.querySelector(".js-total-cost").innerHTML = `$${cost}`;
       }
 
       function subscribe() {
@@ -76,7 +90,7 @@
 
         if (buttonElement.innerText === "Subscribe") {
           buttonElement.innerHTML = "Subscribed";
-          buttonElement.classList.add('is-subscribed');
+          buttonElement.classList.add("is-subscribed");
         } else {
           buttonElement.innerHTML = "Subscribe";
           buttonElement.classList.remove('is-subscribed');
