--- a/DOMPROJPERS2.html
+++ b/DOMPROJPERS2.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
+      body {
+        font-family: Arial;
+      }
+
       .subscribe-button {
         border: none;
         background-color: #000;
@@ -13,11 +17,26 @@
         border-radius: 50px;
         font-weight: 600;
         cursor: pointer;
+        margin-bottom: 30px;
       }
 
       .is-subscribed {
         background-color: rgb(240, 240, 240);
         color: #000;
+      }
+
+      .cost-input {
+        font-size: 15px;
+        padding: 10px 15px;
+      }
+
+      .calculate-button {
+        background-color: green;
+        color: #fff;
+        padding: 12px 15px;
+        border: none;
+        cursor: pointer;
+        font-size: 15px;
       }
     </style>
   </head>
@@ -37,7 +56,7 @@
 
     <input
       placeholder="Cost of order"
-      class="js-cost-input"
+      class="js-cost-input cost-input"
       onkeydown="
        handleCostKeyDown(event);
     "
@@ -46,7 +65,7 @@
     <button
       onclick="
       calculateTotal();
-    "
+    " class="calculate-button"
     >
       Calculate
     </button>
