--- a/DOMprojects2.html
+++ b/DOMprojects2.html
@@ -5,17 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DOM Projects</title>
     <style>
+      body {
+         font-family: Arial;
+      }
+
       .subscribe-button {
         border: none;
         background-color: black;
         color: white;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        padding-left: 15px;
-        padding-right: 15px;
+        padding: 10px 15px;
         font-weight: bold;
         border-radius: 50px;
         cursor: pointer;
+        margin-bottom: 30px;
       }
 
       .is-subscribed {
@@ -23,8 +25,18 @@
         color: black;
       }
 
-      body {
-        
+      .cost-input {
+        font-size: 15px;
+        padding: 10px;
+      }
+
+      .calculate-button {
+        background-color: green;
+        color: white;
+        border: none;
+        font-size: 15px;
+        padding: 12px 15px;
+        cursor: pointer;
       }
     </style>
   </head>
@@ -44,7 +56,7 @@
 
     <input
       placeholder="Cost of order"
-      class="js-cost-input"
+      class="js-cost-input cost-input"
       onkeydown="
       handleCostKeyDown(event);
     "
@@ -53,7 +65,7 @@
     <button
       onclick="
         calculateTotal();
-    "
+    " class="calculate-button"
     >
       Calculate
     </button>
