--- a/rockpaperscissors5.html
+++ b/rockpaperscissors5.html
@@ -6,12 +6,19 @@
     <title>Rock Ppaer Scissors</title>
     <style>
       body {
+        background-color: rgb(25, 25, 25);
         font-family: Arial;
+        color: white;
+      }
+
+      .title {
+        font-size: 30px;
+        font-weight: bold;
       }
     </style>
   </head>
   <body>
-    <p>Rock Paper Scissors</p>
+    <p class="title">Rock Paper Scissors</p>
 
     <button
       onclick="
