--- a/rockpapscspersonal.html
+++ b/rockpapscspersonal.html
@@ -4,16 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      body {
+       background-color: rgb(25, 25, 25);
+       font-family: Arial;
+       color: #fff;
+      }
+
+      .title {
+        font-size: 30px;
+        font-weight: bold;
+      }
+    </style>
   </head>
   <body>
-    <p>Rock Paper Scissors</p>
+    <p class="title">Rock Paper Scissors</p>
 
     <button
       onclick="
       playGame('rock');
   "
     >
-      Rock
+      <img src="images/rock-emoji.png" alt="rock-emoji">
     </button>
 
     <button
