--- a/rockpaperscissors5.html
+++ b/rockpaperscissors5.html
@@ -22,7 +22,10 @@
 
       .move-button {
         background-color: transparent;
-        border: 1px solid white;
+        border: 3px solid white;
+        width: 120px;
+        height: 120px;
+        border-radius: 60px;
       }
     </style>
   </head>
