Styling the rock paper scissors game.

--- a/rockpaperscissors5.html
+++ b/rockpaperscissors5.html
@@ -26,6 +26,26 @@
         width: 120px;
         height: 120px;
         border-radius: 60px;
+        margin-right: 10px;
+        cursor: pointer;
+      }
+
+      .result {
+        font-size: 25px;
+        font-weight: bold;
+        margin-top: 50px;
+      }
+
+      .score {
+        margin-top: 60px;
+      }
+
+      .reset-score-button {
+        background-color: white;
+        border: none;
+        font-size: 15px;
+        padding: 8px 15px;
+        cursor: pointer;
       }
     </style>
   </head>
@@ -57,11 +77,14 @@
       <img class="move-icon" src="images/scissors-emoji.png" alt="scissors-emoji" />
     </button>
 
-    <p class="js-result"></p>
+    <p class="js-result result">You win</p>
 
-    <p class="js-moves"></p>
+    <p class="js-moves moves">
+      You <img class="move-icon" src="images/rock-emoji.png" alt="rock-emoji"> 
+      <img class="move-icon" src="images/scissors-emoji.png" alt="scissors-emoji"> Computer
+    </p>
 
-    <p class="js-score"></p>
+    <p class="js-score score"></p>
 
     <button
       onclick="
@@ -70,7 +93,7 @@
      score.ties = 0
      localStorage.removeItem('score');
      updateScoreElement();
-    "
+    " class="reset-score-button"
     >
       Reset Score
     </button>
