--- a/rockpaperscissors5.html
+++ b/rockpaperscissors5.html
@@ -55,7 +55,8 @@
     <button
       onclick="
       playGame('rock');
-  "  class="move-button"
+  "
+      class="move-button"
     >
       <img class="move-icon" src="images/rock-emoji.png" alt="rock-emoji" />
     </button>
@@ -63,7 +64,8 @@
     <button
       onclick="
       playGame('paper');
-  " class="move-button"
+  "
+      class="move-button"
     >
       <img class="move-icon" src="images/paper-emoji.png" alt="paper-emoji" />
     </button>
@@ -72,16 +74,19 @@
       onclick="
       playGame('scissors');
 
-    " class="move-button"
+    "
+      class="move-button"
     >
-      <img class="move-icon" src="images/scissors-emoji.png" alt="scissors-emoji" />
+      <img
+        class="move-icon"
+        src="images/scissors-emoji.png"
+        alt="scissors-emoji"
+      />
     </button>
 
-    <p class="js-result result">You win</p>
+    <p class="js-result result"></p>
 
-    <p class="js-moves moves">
-      You <img class="move-icon" src="images/rock-emoji.png" alt="rock-emoji"> 
-      <img class="move-icon" src="images/scissors-emoji.png" alt="scissors-emoji"> Computer
+    <p class="js-moves">
     </p>
 
     <p class="js-score score"></p>
@@ -93,7 +98,8 @@
      score.ties = 0
      localStorage.removeItem('score');
      updateScoreElement();
-    " class="reset-score-button"
+    "
+      class="reset-score-button"
     >
       Reset Score
     </button>
@@ -164,7 +170,8 @@
 
         document.querySelector(
           ".js-moves"
-        ).innerHTML = `You ${playerMove} - ${computerMove} Computer`;
+        ).innerHTML = `You <img class="move-icon" src="images/${playerMove}-emoji.png" alt="rock-emoji"> 
+        <img class="move-icon" src="images/${computerMove}-emoji.png" alt="scissors-emoji"> Computer`;
       }
 
       function updateScoreElement() {
