--- a/exercises/10eHCJ.html
+++ b/exercises/10eHCJ.html
@@ -4,23 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      .toggle-button {
-        background-color: #000;
-        color: #fff;
-        font-size: 15px;
-        padding: 10px 15px;
-        border-radius: 4px;
-        cursor: pointer;
-        margin-right: 16px;
-        border: none;
-      }
-
-      .is-toggled {
-        background-color: rgb(230, 230, 230);
-        color: #000;
-      }
-    </style>
+    <link rel="stylesheet" href="/styles/10eHCJ.css">
   </head>
   <body>
     <button
