Finished styling the calculator project.

--- a/exercises/Calculator5.html
+++ b/exercises/Calculator5.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <p class="js-calculation"></p>
+    <p class="js-calculation calculation"></p>
     <p>
       <button
         onclick="
