--- a/CalculatorFinal.html
+++ b/CalculatorFinal.html
@@ -4,26 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-     body {
-      font-family: Arial, Helvetica, sans-serif;
-      background-color: #000;
-     }
-
-
-    .calculation {
-       font-size: 15px;
-       color: #fff;
-    }
-    </style>
+    <link rel="stylesheet" href="styles/CalculatorFinal.css">
   </head>
   <body>
-    <p class="js-calculation calulation"></p>
+    <p class="js-calculation calculation"></p>
     <p>
       <button
         onclick="
        updateCalculation('1');
       "
+        class="number-button"
       >
         1
       </button>
@@ -31,8 +21,9 @@
       <button
         onclick="
       updateCalculation('2');
-      
+        
     "
+        class="number-button"
       >
         2
       </button>
@@ -41,6 +32,7 @@
         onclick="
       updateCalculation('3');
     "
+        class="number-button"
       >
         3
       </button>
@@ -49,6 +41,7 @@
         onclick="
      updateCalculation(' + ');
     "
+        class="sign-button"
       >
         +
       </button>
@@ -59,6 +52,7 @@
         onclick="
       updateCalculation('4');
    "
+        class="number-button"
       >
         4
       </button>
@@ -67,6 +61,7 @@
         onclick="
      updateCalculation('5');
    "
+        class="number-button"
       >
         5
       </button>
@@ -75,6 +70,7 @@
         onclick="
      updateCalculation('6');
    "
+        class="number-button"
       >
         6
       </button>
@@ -83,6 +79,7 @@
         onclick="
      updateCalculation(' - ');
    "
+        class="sign-button"
       >
         -
       </button>
@@ -93,6 +90,7 @@
         onclick="
      updateCalculation('7');
    "
+        class="number-button"
       >
         7
       </button>
@@ -101,6 +99,7 @@
         onclick="
     updateCalculation('8');
    "
+        class="number-button"
       >
         8
       </button>
@@ -109,6 +108,7 @@
         onclick="
      updateCalculation('9');
    "
+        class="number-button"
       >
         9
       </button>
@@ -117,6 +117,7 @@
         onclick="
      updateCalculation(' * ');
    "
+        class="sign-button"
       >
         *
       </button>
@@ -127,17 +128,26 @@
         onclick="
      updateCalculation('0');
    "
+        class="number-button"
       >
         0
       </button>
 
-      <button>.</button>
+      <button
+        onclick="
+       updateCalculation(' . ');
+      "
+        class="number-button"
+      >
+        .
+      </button>
 
       <button
         onclick="
      calculation = eval(calculation);
      displayCalculation();
     "
+        class="number-button"
       >
         =
       </button>
@@ -146,6 +156,7 @@
         onclick="
     updateCalculation(' / ');
    "
+        class="sign-button"
       >
         /
       </button>
@@ -157,24 +168,11 @@
   console.log('Cleared');
   displayCalculation();
  "
+      class="number-button clear-text"
     >
       Clear
     </button>
 
-    <script>
-      let calculation = localStorage.getItem("calculation") || "";
-
-      displayCalculation();
-
-      function updateCalculation(value) {
-        calculation += value;
-        displayCalculation();
-        localStorage.setItem("calculation", calculation);
-      }
-
-      function displayCalculation() {
-        document.querySelector(".js-calculation").innerHTML = calculation;
-      }
-    </script>
+    <script src="/script/CalculatorFinal.js"></script>
   </body>
 </html>
