TODO list project

--- a/TODOlistpersproject.html
+++ b/TODOlistpersproject.html
@@ -3,9 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>TODO List</title>
 </head>
 <body>
-  
+  <p>Todo List</p>
+
+  <input placeholder="Todo name" class="js-name-input">
+
+  <button onclick="
+   addTodo();
+  ">Add</button>
+  <script src="script/TODOlistpersonal.js"></script>
 </body>
 </html>
