--- a/TOdolistproject.html
+++ b/TOdolistproject.html
@@ -6,6 +6,13 @@
   <title>TODO list</title>
 </head>
 <body>
-  
+  <p>Todo List</p>
+
+  <input placeholder="Todo name" class="js-name-input">
+
+  <button class="" onclick="
+  addTodo();
+  ">Add</button>
+  <script src="script/Todolist.js"></script>
 </body>
 </html>
