--- a/ARRAYSANDLOOPS.html
+++ b/ARRAYSANDLOOPS.html
@@ -34,7 +34,34 @@
       console.log(myArray);
       */
 
-      
+      /*
+      let i = 1;
+
+      while (i <= 5) {
+        console.log(i);
+        i++;
+      }
+
+      for (let i = 1; i <= 5; i++) {
+        console.log(i);
+      };
+
+      let randomNumber = 0;
+
+      while (randomNumber < 0.5) {
+         randomNumber = Math.random();
+      }
+
+      console.log(randomNumber);
+      */
+
+      const todoList = ["make dinner", "wash dishes", "watch news"];
+
+      for (let index = 0; index < todoList.length; index++) {
+        const value = todoList[index];
+        console.log(value);
+         console.log(index);
+      }
     </script>
   </body>
 </html>
