--- a/ARRAYSANDLOOPS.html
+++ b/ARRAYSANDLOOPS.html
@@ -55,13 +55,24 @@
       console.log(randomNumber);
       */
 
+      /*
       const todoList = ["make dinner", "wash dishes", "watch news"];
 
-      for (let index = 0; index < todoList.length; index++) {
-        const value = todoList[index];
+      for (let i = 0; i < todoList.length; i++) {
+        const value = todoList[i];
         console.log(value);
-         console.log(index);
+         console.log(i);
       }
+      */
+
+      const nums = [1, 1, 3];
+      let total = 0;
+
+      for (let i = 0; i < nums.length; i++) {
+          const num = nums[i];
+          total += num;
+      }
+      console.log(total);
     </script>
   </body>
 </html>
