Todolist project learn and practice.

--- a/TOdolistproject.html
+++ b/TOdolistproject.html
@@ -13,6 +13,8 @@
   <button class="" onclick="
   addTodo();
   ">Add</button>
+
+  <div class="js-todo-list"></div>
   <script src="script/Todolist.js"></script>
 </body>
 </html>
