--- a/TODOlistpersproject.html
+++ b/TODOlistpersproject.html
@@ -13,6 +13,8 @@
   <button onclick="
    addTodo();
   ">Add</button>
+  
+  <div class="js-todo-list"></div>
   <script src="script/TODOlistpersonal.js"></script>
 </body>
 </html>
