--- a/TODOlistpersproject.html
+++ b/TODOlistpersproject.html
@@ -14,7 +14,7 @@
    addTodo();
   ">Add</button>
   
-  <div class="js-todo-list"></div>
+ <p class="js-todo-list"></p>
   <script src="script/TODOlistpersonal.js"></script>
 </body>
 </html>
