--- a/TODOlistpersproject.html
+++ b/TODOlistpersproject.html
@@ -10,6 +10,8 @@
 
   <input placeholder="Todo name" class="js-name-input">
 
+  <input type="date" class="js-due-date-input">
+
   <button onclick="
    addTodo();
   ">Add</button>
