--- a/TODOlistpersproject.html
+++ b/TODOlistpersproject.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/TODOlist.css">
   <title>TODO List</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
    addTodo();
   ">Add</button>
   
- <p class="js-todo-list"></p>
+ <div class="js-todo-list todo-grid"></div>
   <script src="script/TODOlistpersonal.js"></script>
 </body>
 </html>
