--- a/TOdolistproject.html
+++ b/TOdolistproject.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/Todo-list.css">
   <title>TODO list</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
   addTodo();
   ">Add</button>
 
-  <div class="js-todo-list"></div>
+  <div class="js-todo-list todo-grid"></div>
   <script src="script/Todolist.js"></script>
 </body>
 </html>
