--- a/ToDoproject2.html
+++ b/ToDoproject2.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/ToDoproject2.css">
-  <title>Document</title>
-</head>
-<body>
-  <p>Todo List</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/ToDoproject2.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <p>Todo List</p>
 
-  <input placeholder="Todo name" class="js-name-input">
+    <div class="todo-input-grid">
+      <input placeholder="Todo name" class="js-name-input name-input" />
 
-  <input type="date" class="js-due-date-input">
+      <input type="date" class="js-due-date-input due-date-input" />
 
-  <button onclick="
+      <button
+        onclick="
     addTodo();
-  ">Add</button>
+  "   class="todo-add-button"
+      >
+        Add
+      </button>
+    </div>
 
-  <div class="js-todo-list todo-grid"></div>
-  <script src="script/ToDo.js"></script>
-</body>
+    <div class="js-todo-list todo-grid"></div>
+    <script src="script/ToDo.js"></script>
+  </body>
 </html>
